# calculator-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: Calculator.h
src/: Calculator.cpp  main.cpp
